--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
@@ -30,9 +31,13 @@
     "require-dev": {
         "hautelook/alice-bundle": "dev-allow_persistence",
         "symfony/browser-kit": "5.1.*",
+        "symfony/debug-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
         "symfony/maker-bundle": "dev-master",
-        "symfony/phpunit-bridge": "^5.2@dev"
+        "symfony/phpunit-bridge": "^5.2@dev",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/var-dumper": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "repositories": [
         {
