--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/mercure-bundle": "0.2.x-dev",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
@@ -29,7 +30,8 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "hautelook/alice-bundle": "dev-allow_persistence",
+        "hautelook/alice-bundle": "^2.8.0",
+        "justinrainbow/json-schema": "5.x-dev",
         "symfony/browser-kit": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
@@ -39,12 +41,6 @@
         "symfony/var-dumper": "5.1.*",
         "symfony/web-profiler-bundle": "5.1.*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/franmomu/AliceBundle"
-        }
-    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
