--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,16 @@
 {
+    "name": "soyuka/api-platform-by-example",
     "type": "project",
     "license": "proprietary",
+    "bin": ["bin/sandbox"],
     "require": {
         "php": ">=7.2.5",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
         "api-platform/core": "^2.5",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
-        "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
@@ -19,7 +18,6 @@
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/mercure-bundle": "0.2.x-dev",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
@@ -35,7 +33,7 @@
         "symfony/browser-kit": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
-        "symfony/maker-bundle": "dev-master",
+        "symfony/maker-bundle": "dev-main",
         "symfony/phpunit-bridge": "^5.2@dev",
         "symfony/stopwatch": "5.1.*",
         "symfony/var-dumper": "5.1.*",
