--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "bin": ["bin/sandbox"],
     "require": {
         "php": ">=7.2.5",
-        "api-platform/core": "^2.5",
+        "api-platform/core": "^2.6",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.1",
@@ -20,7 +20,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
-        "symfony/property-info": "5.1.*",
+        "symfony/property-info": "5.2.*",
         "symfony/security-bundle": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
@@ -29,12 +29,11 @@
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8.0",
-        "justinrainbow/json-schema": "5.x-dev",
+        "justinrainbow/json-schema": "5.x",
         "symfony/browser-kit": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
-        "symfony/maker-bundle": "dev-main",
-        "symfony/phpunit-bridge": "^5.2@dev",
+        "symfony/phpunit-bridge": "5.1.*",
         "symfony/stopwatch": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/web-profiler-bundle": "5.1.*"
@@ -85,6 +84,5 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
