--- a/composer.json
+++ b/composer.json
@@ -8,35 +8,38 @@
         "api-platform/core": "^2.5",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-bundle": "2.2.x",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
+        "symfony/doctrine-bridge": "5.2.2",
         "symfony/dotenv": "5.1.*",
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/mercure-bundle": "0.2.x-dev",
+        "symfony/maker-bundle": "^1.28",
+        "symfony/mercure-bundle": "0.2.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
+        "symfony/proxy-manager-bridge": "5.1.*",
         "symfony/security-bundle": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
-        "symfony/validator": "5.1.*",
+        "symfony/uid": "5.1.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8.0",
-        "justinrainbow/json-schema": "5.x-dev",
+        "justinrainbow/json-schema": "5.x",
         "symfony/browser-kit": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
-        "symfony/maker-bundle": "dev-master",
-        "symfony/phpunit-bridge": "^5.2@dev",
+        "symfony/phpunit-bridge": "5.2.*",
         "symfony/stopwatch": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/web-profiler-bundle": "5.1.*"
@@ -87,6 +90,5 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
