--- a/composer.json
+++ b/composer.json
@@ -11,38 +11,40 @@
         "doctrine/doctrine-bundle": "2.2.x",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "jane-php/automapper": "^6.3",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "symfony/asset": "5.1.*",
-        "symfony/console": "5.1.*",
+        "soyuka/esql": "^1.0@alpha",
+        "symfony/asset": "5.2.*",
+        "symfony/console": "5.2.*",
         "symfony/doctrine-bridge": "5.2.2",
-        "symfony/dotenv": "5.1.*",
-        "symfony/expression-language": "5.1.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
+        "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.28",
         "symfony/mercure-bundle": "0.2.*",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/property-access": "5.1.*",
-        "symfony/property-info": "5.1.*",
-        "symfony/proxy-manager-bridge": "5.1.*",
-        "symfony/security-bundle": "5.1.*",
-        "symfony/serializer": "5.1.*",
-        "symfony/twig-bundle": "5.1.*",
-        "symfony/uid": "5.1.*",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
+        "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/uid": "5.2.*",
         "symfony/validator": "5.2.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8.0",
         "justinrainbow/json-schema": "5.x",
-        "symfony/browser-kit": "5.1.*",
-        "symfony/debug-bundle": "5.1.*",
-        "symfony/http-client": "5.1.*",
+        "symfony/browser-kit": "5.2.*",
+        "symfony/debug-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/phpunit-bridge": "5.2.*",
-        "symfony/stopwatch": "5.1.*",
-        "symfony/var-dumper": "5.1.*",
-        "symfony/web-profiler-bundle": "5.1.*"
+        "symfony/stopwatch": "5.2.*",
+        "symfony/var-dumper": "5.2.*",
+        "symfony/web-profiler-bundle": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -88,7 +90,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.1.*"
+            "require": "5.2.*"
         }
-    }
+    },
+    "minimum-stability": "alpha"
 }
