--- a/composer.json
+++ b/composer.json
@@ -5,46 +5,41 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.5",
+        "api-platform/core": "^2.6",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "hautelook/alice-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "symfony/asset": "5.1.*",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
-        "symfony/expression-language": "5.1.*",
+        "symfony/asset": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/maker-bundle": "^1.28",
+        "symfony/mercure-bundle": "^0.2.6",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/property-access": "5.1.*",
-        "symfony/property-info": "5.1.*",
-        "symfony/security-bundle": "5.1.*",
-        "symfony/serializer": "5.1.*",
-        "symfony/twig-bundle": "5.1.*",
-        "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/validator": "5.2.*",
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "hautelook/alice-bundle": "dev-allow_persistence",
-        "symfony/browser-kit": "5.1.*",
-        "symfony/debug-bundle": "5.1.*",
-        "symfony/http-client": "5.1.*",
-        "symfony/maker-bundle": "dev-master",
+        "symfony/browser-kit": "5.2.*",
+        "symfony/debug-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/phpunit-bridge": "^5.2@dev",
-        "symfony/stopwatch": "5.1.*",
-        "symfony/var-dumper": "5.1.*",
-        "symfony/web-profiler-bundle": "5.1.*"
+        "symfony/stopwatch": "5.2.*",
+        "symfony/var-dumper": "5.2.*",
+        "symfony/web-profiler-bundle": "5.2.*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/franmomu/AliceBundle"
-        }
-    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
@@ -89,8 +84,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.1.*"
+            "require": "5.2.*"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
