--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.6",
+        "api-platform/core": "^2.6.1",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
@@ -21,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.28",
+        "symfony/messenger": "5.2.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
